<resources>
    <string name="app_name">The Good News Bible</string>
    <string name="str_about">About…</string>
    <string name="str_more_app">More apps…</string>
    <string name="str_share">Share…</string>
    <string name="str_more">More…</string>
    <string name="str_search">Search</string>
    <string name="str_contrast">Contrast</string>
    <string name="str_ot">Old Testament</string>
    <string name="str_nt">New Testament</string>
    <string name="str_rate">Rate</string>
    <string name="str_bookmark">Bookmark</string>
    <string name="str_favorite">Favorite</string>
    <string name="str_favorite_rm">Remove Favorite</string>
    <string name="app_name_lat">Holy Bible (KJV)</string>

    <string name="str_recommendation">I like Bible and I recommend it :)</string>
    <string name="offlinebible_apps_link">http://www.delron.com</string>
    <string name="offlinebible_apps_email">donadonatta@gmail.com</string>
    <string name="facebook_link">https://www.facebook.com/delron-1899899473781340/</string>
    <string name="tweeter_link">https://twitter.com/?lang=en</string>
    <string name="offlinebible_apps_bible_link">http://goo.gl/Q7</string>
    <string name="market_url">market://</string>
    <string name="market_url_web">https://play.google.com/store/apps/</string>
    <string name="market_details">details?id=com.goodlen.bible.news</string>
    <string name="market_developer">search?q=Installs 1,000,000,000+</string>

    <string name="banner_home_footer">ca-app-pub-5712093566832697/4415047149</string>
    <string name="admob_interstitial_id">ca-app-pub-5712093566832697/5083177279 </string>
    <string name="interstitial_full_screen">ca-app-pub-5712093566832697/5083177279</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>

</resources>
